--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@capacitor/app": "4.0.1",
     "@capacitor/core": "4.4.0",
     "@capacitor/geolocation": "^4.0.1",
+    "@capacitor/google-maps": "^4.3.1",
     "@capacitor/haptics": "4.0.1",
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
