--- a/android/variables.gradle
+++ b/android/variables.gradle
@@ -13,4 +13,11 @@ ext {
     androidxJunitVersion = '1.1.3'
     androidxEspressoCoreVersion = '3.4.0'
     cordovaAndroidVersion = '10.1.1'
+    googleMapsPlayServicesVersion = '18.0.2'
+    googleMapsUtilsVersion = '2.3.0'
+    googleMapsKtxVersion = '3.4.0'
+    googleMapsUtilsKtxVersion = '3.4.0'
+    kotlinxCoroutinesVersion = '1.6.3'
+    androidxCoreKTXVersion = '1.8.0'
+    kotlin_version = '1.7.0'
 }
