--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@ionic/vue-router": "^6.0.0",
     "axios": "^1.1.3",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.1.1",
     "ionicons": "^6.0.3",
+    "ol": "^7.1.0",
     "vue": "^3.2.21",
     "vue-axios": "^3.5.0",
     "vue-router": "^4.0.12"
