--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
     "axios": "^1.1.3",
+    "bcryptjs": "^2.4.3",
     "core-js": "^3.6.5",
     "crypto-js": "^4.1.1",
     "ionicons": "^6.0.3",
     "ol": "^7.1.0",
+    "pinia": "^2.0.27",
     "vue": "^3.2.21",
     "vue-axios": "^3.5.0",
     "vue-router": "^4.0.12"
