--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@capacitor/android": "4.4.0",
     "@capacitor/app": "4.0.1",
+    "@capacitor/camera": "^4.1.4",
     "@capacitor/core": "4.4.0",
     "@capacitor/geolocation": "^4.0.1",
     "@capacitor/google-maps": "^4.3.1",
     "@capacitor/haptics": "4.0.1",
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
+    "@ionic/pwa-elements": "^3.1.1",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
     "axios": "^1.1.3",
