--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
     "core-js": "^3.6.5",
     "crypto-js": "^4.1.1",
     "ionicons": "^6.0.3",
+    "loader": "^2.1.1",
     "ol": "^7.1.0",
     "pinia": "^2.0.27",
+    "sas": "^3.0.4",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
     "vue": "^3.2.21",
     "vue-axios": "^3.5.0",
     "vue-router": "^4.0.12"
