--- a/package.json
+++ b/package.json
@@ -11,46 +11,47 @@
   },
   "dependencies": {
     "@capacitor/android": "4.4.0",
-    "@capacitor/app": "4.0.1",
+    "@capacitor/app": "4.1.1",
     "@capacitor/camera": "^4.1.4",
-    "@capacitor/core": "4.4.0",
-    "@capacitor/geolocation": "^4.0.1",
-    "@capacitor/google-maps": "^4.3.1",
-    "@capacitor/haptics": "4.0.1",
-    "@capacitor/keyboard": "4.0.1",
-    "@capacitor/status-bar": "4.0.1",
+    "@capacitor/core": "^4.4.0",
+    "@capacitor/geolocation": "4.1.0",
+    "@capacitor/google-maps": "4.3.2",
+    "@capacitor/haptics": "4.1.0",
+    "@capacitor/keyboard": "4.1.0",
+    "@capacitor/splash-screen": "^4.1.2",
+    "@capacitor/status-bar": "4.1.1",
     "@ionic/pwa-elements": "^3.1.1",
-    "@ionic/vue": "^6.0.0",
-    "@ionic/vue-router": "^6.0.0",
-    "axios": "^1.1.3",
+    "@ionic/vue": "6.4.2",
+    "@ionic/vue-router": "6.4.2",
+    "axios": "1.2.2",
     "bcryptjs": "^2.4.3",
-    "core-js": "^3.6.5",
+    "core-js": "3.27.1",
     "crypto-js": "^4.1.1",
-    "ionicons": "^6.0.3",
+    "ionicons": "6.0.4",
     "loader": "^2.1.1",
-    "ol": "^7.1.0",
-    "pinia": "^2.0.27",
-    "sas": "^3.0.4",
+    "ol": "7.2.2",
+    "pinia": "2.0.28",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
-    "vue": "^3.2.21",
-    "vue-axios": "^3.5.0",
-    "vue-router": "^4.0.12"
+    "vue": "3.2.45",
+    "vue-axios": "3.5.2",
+    "vue-router": "4.1.6"
   },
   "devDependencies": {
     "@capacitor/cli": "4.4.0",
-    "@ionic/cli": "6.20.3",
+    "@ionic/cli": "6.20.6",
     "@vue/cli-plugin-babel": "~5.0.0-rc.1",
     "@vue/cli-plugin-e2e-cypress": "~5.0.0-rc.1",
     "@vue/cli-plugin-eslint": "~5.0.0-rc.1",
     "@vue/cli-plugin-router": "~5.0.0-rc.1",
     "@vue/cli-plugin-unit-jest": "~5.0.0-rc.1",
     "@vue/cli-service": "~5.0.0-rc.1",
-    "@vue/test-utils": "^2.0.0-rc.16",
+    "@vue/test-utils": "2.2.7",
     "@vue/vue3-jest": "^27.0.0-alpha.3",
     "babel-jest": "^27.3.1",
+    "cordova-res": "0.15.4",
     "cypress": "^8.7.0",
-    "eslint": "^8.4.1",
+    "eslint": "8.31.0",
     "eslint-plugin-vue": "^8.2.0",
     "jest": "^27.3.1",
     "ts-jest": "^27.0.7"
