--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Geolife",
+  "name": "geolife",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -27,6 +27,7 @@
     "bcryptjs": "^2.4.3",
     "core-js": "3.27.1",
     "crypto-js": "^4.1.1",
+    "firebase": "^9.15.0",
     "ionicons": "6.0.4",
     "loader": "^2.1.1",
     "ol": "7.2.2",
